<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.nsc.learningfunnymath.GameSelector"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg2"
    android:longClickable="true"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/game_selector_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ff5403ff"
        android:textSize="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/game_selector_bingo"
        android:onClick="goToBingo"
        android:background="@drawable/btn_blue"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#fffffe00"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/game_selector_matching"
        android:onClick="goToMatching"
        android:background="@drawable/btn_yellow"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#ff0336ff"/>

</LinearLayout>
